# wave

./: kls_database.db  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/space/coderoman/wave/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OboeAudioPlayer.cpp  WaveFactory.cpp  WaveSynthesizer.cpp  WavetableOscillator.cpp  wavesynthesizer-native-lib.cpp
app/src/main/cpp/include/: AudioPlayer.h  AudioSource.h  Log.h  MathConstants.h  OboeAudioPlayer.h  Wave.h  WaveFactory.h  WaveSynthesizer.h  WavetableOscillator.h
app/src/main/java/space/coderoman/wave/: LoggingWaveSynthesizer.kt  MainActivity.kt  NativeWaveSynthesizer.kt  WaveSynthesizer.kt  WaveSynthesizerViewModel.kt
app/src/main/java/space/coderoman/wave/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml
app/src/test/java/space/coderoman/wave/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
